Some responsivity bugs fixed

--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="/images/favicon.png" alt="" height="32">
+                    <img src="./images/favicon.png" alt="" height="32">
                 </a>
               <a class="navbar-brand" href="./index.html">Dicomo</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,6 @@
                             <th scope="col">LUNES</th>
                             <th scope="col">MARTES</th>
                             <th scope="col">JUEVES</th>
-                            <th scope="col">VIERNES</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -114,13 +113,6 @@
                         <tr>
                             <th>14.00-17.00</th>
                             <th colspan="5">DESCANSO</th>
-                        </tr>
-                        <tr>
-                            <th>17.00-18.00</th>
-                            <td rowspan="3">Cuidado y mantenimiento</td>
-                            <td>Ceras</td>
-                            <td rowspan="2">Lijado</td>
-                            <td rowspan="3">Cerrado</td>
                         </tr>
                       </tbody>
                   </table>
